@@ -2,7 +2,7 @@
  * ============LICENSE_START=======================================================
  * policy-yaml unit test
  * ================================================================================
- * Copyright (C) 2017-2019 AT&T Intellectual Property. All rights reserved.
+ * Copyright (C) 2017-2020 AT&T Intellectual Property. All rights reserved.
  * Modifications Copyright (C) 2019 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -341,7 +341,7 @@ public class ControlLoopPolicyBuilderTest {
                         PolicyResult.FAILURE,
                         PolicyResult.FAILURE_RETRIES,
                         PolicyResult.FAILURE_TIMEOUT);
-        assertTrue(builder.calculateTimeout().equals(new Integer(300 + 600)));
+        assertEquals(Integer.valueOf(300 + 600), builder.calculateTimeout());
     }
 
     @Test
